# rs-teams

./: .gitignore  CLAUDE.md  Cargo.toml
src/: app.rs  error.rs  main.rs
src/api/: client.rs  csa.rs  graph.rs  mod.rs  types.rs
src/auth/: browser.rs  keychain.rs  mod.rs  token.rs
src/gui/: chat_view.rs  layout_tracker.rs  login.rs  mod.rs  screen.rs  sidebar.rs  style.rs  widget.rs
src/models/: chat.rs  message.rs  user.rs
src/utils/: time.rs
